apps/prometheus/exporters/truenas-exporter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: truenas-graphite-exporter-svc
  namespace: prometheus-exporters
  labels:
    io.cilium/lb-pool: vlan50-pool-tcp-ingress
spec:
  type: LoadBalancer
  ports:
    - name: graphite-in
      port: 9109
      targetPort: 9109
      protocol: TCP
  selector:
    app.kubernetes.io/name: truenas-graphite-exporter
