apps/prometheus/exporters/truenas-exporter/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: truenas-graphite-exporter-tcp-route
  namespace: prometheus-exporters
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ingress-gateway
      namespace: cluster-gateway # Namespace where your Gateway object lives
      sectionName: graphite-in # Links directly to the listener name above
  rules:
    - backendRefs:
        - name: truenas-graphite-exporter-svc
          port: 9109
